# benzaqui.github.io

./: .env.example  .gitignore  CLAUDE.md  CNAME  cv.html  head-of-ai.html  index.html  langgraph.json  ma-voix-index.html  pyproject.toml  requirements.txt
assets/css/: main.css  main.min.css
ma-voix/: privacy.html
src/: __init__.py  state.py
src/agents/: __init__.py  email_processor.py  intent_classifier.py  knowledge_retriever.py  response_generator.py  router.py
tests/: __init__.py
tests/integration/: __init__.py
tests/mocks/: __init__.py
tests/unit/: __init__.py
